Bug 1230693 - Rebase transforms to the origin for callers than don't want them offset. r=mstange